@@ -8,31 +8,32 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
-
     @Value("${frontend.url}")
     private String frontendUrl;
-
+    
     @Bean
     public CorsFilter corsFilter() {
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(List.of(frontendUrl));
-        corsConfiguration.setAllowedHeaders(Arrays.asList(
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowCredentials(true);
+        config.setAllowedOrigins(Collections.singletonList(frontendUrl));
+        config.setAllowedHeaders(Arrays.asList(
                 "Origin", "Content-Type", "Accept", "Authorization", 
                 "X-Requested-With", "Access-Control-Request-Method", 
                 "Access-Control-Request-Headers"));
-        corsConfiguration.setExposedHeaders(Arrays.asList(
+        config.setExposedHeaders(Arrays.asList(
                 "Origin", "Content-Type", "Accept", "Authorization",
-                "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials",
+                "Set-Cookie")); // Thêm Set-Cookie vào exposedHeaders
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         
-        UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-        urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
         
-        return new CorsFilter(urlBasedCorsConfigurationSource);
+        System.out.println("CORS configured with frontend URL: " + frontendUrl);
+        return new CorsFilter(source);
     }
 }
